[package]
name = "drive_db"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"]}
reqwest = { version = "0.12.0", features = ["json", "multipart"] }
tokio = {version = "1.49.0", features = ["full"]}
thiserror = "2.0.17"